--- a/deploy/charts/airlock-microgateway-cni/tests/tests_test.yaml
+++ b/deploy/charts/airlock-microgateway-cni/tests/tests_test.yaml
@@ -83,10 +83,22 @@ tests:
       - notExists:
           path: spec.imagePullSecrets
 
-  - it: should create imagePullSecrets if set
+  - it: should create imagePullSecrets if set as list of objects
     set:
       imagePullSecrets:
         - name: myRegistryPullSecret
+    asserts:
+      - contains:
+          path: spec.imagePullSecrets
+          content:
+            name: myRegistryPullSecret
+          count: 1
+          any: true
+
+  - it: should create imagePullSecrets if set as list of strings
+    set:
+      imagePullSecrets:
+        - myRegistryPullSecret
     asserts:
       - contains:
           path: spec.imagePullSecrets
