--- a/deploy/charts/airlock-microgateway-cni/values.yaml
+++ b/deploy/charts/airlock-microgateway-cni/values.yaml
@@ -6,19 +6,23 @@ fullnameOverride: ""
 commonLabels: {}
 # -- Annotations to add to all resources.
 commonAnnotations: {}
-# -- ImagePullSecrets to use when pulling images.
+# -- ImagePullSecrets to use when pulling images. Can be defined either as a list of objects or as a list of strings.
 imagePullSecrets: []
-#   - name: myRegistryKeySecretName
+#   - name: myRegistryKeySecretName1
+#   - name: myRegistryKeySecretName2
+# or
+#   - myRegistryKeySecretName1
+#   - myRegistryKeySecretName2
 
 # Specifies the Airlock Microgateway CNI image.
 image:
   # -- Image repository from which to pull the Airlock Microgateway CNI image.
   repository: "quay.io/airlock/microgateway-cni"
   # -- Image tag to pull.
-  tag: "4.7.1"
+  tag: "4.7.2"
   # -- SHA256 image digest to pull (in the format "sha256:7144f7bab3d4c2648d7e59409f15ec52a18006a128c733fcff20d3a4a54ba44a").
   # Overrides tag when specified.
-  digest: "sha256:f1826f7ad20c72b57eda20da5782c73eb5675e726296dd9cda44b7a9af8e63eb"
+  digest: "sha256:3fb526642f01ade4cf830da978fc9be500345babdfb09260e46201b8e0471203"
   # -- Pull policy for this image.
   pullPolicy: IfNotPresent
 # -- Annotations to add to all Pods.
