--- a/deploy/charts/airlock-microgateway/crds/graphqls.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/graphqls.microgateway.airlock.com.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.7.1
+    app.kubernetes.io/version: 4.7.2
   name: graphqls.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -58,10 +58,12 @@ spec:
                       description: Specifies the GraphQL schema.
                       properties:
                         source:
-                          description: Source specifies the GraphQL schema to be enforced.
+                          description: Source specifies the GraphQL (October 2021 Edition) schema to be enforced.
                           properties:
                             configMapRef:
-                              description: ConfigMapRef references the configmap by its name containing the well-known key `schema.graphql`. Use the `data` field for plaintext or the `binaryData` for compressed data. Supported compression formats are zstd, gzip or zip.
+                              description: |-
+                                ConfigMapRef references the configmap by its name containing the well-known key `schema.graphql`. Use the `data` field for plaintext or the `binaryData` for compressed data. Supported compression formats are zstd, gzip or zip.
+                                Note: If the provided GraphQL schema is invalid (e.g., due to syntax errors), the Airlock Microgateway Engine will log an error, GraphQL validation will always fail, and requests will be blocked.
                               properties:
                                 name:
                                   description: Name of the resource
