--- a/deploy/charts/airlock-microgateway/templates/operator/deployment.yaml
+++ b/deploy/charts/airlock-microgateway/templates/operator/deployment.yaml
@@ -147,7 +147,7 @@ spec:
       terminationGracePeriodSeconds: 10
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+        {{- include "airlock-microgateway.imagePullSecrets" . | nindent 8 }}
       {{- end }}
       {{- with .Values.operator.nodeSelector }}
       nodeSelector:
