--- a/deploy/charts/airlock-microgateway/templates/tests/statefulset.yaml
+++ b/deploy/charts/airlock-microgateway/templates/tests/statefulset.yaml
@@ -52,7 +52,7 @@ spec:
             {{- include "airlock-microgateway.restrictedSecurityContext" . | nindent 12 }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+        {{- include "airlock-microgateway.imagePullSecrets" . | nindent 8 }}
       {{- end }}
       automountServiceAccountToken: false
 {{- end -}}
