--- a/deploy/charts/airlock-microgateway/templates/tests/test-install.yaml
+++ b/deploy/charts/airlock-microgateway/templates/tests/test-install.yaml
@@ -51,7 +51,7 @@ spec:
       {{- include "airlock-microgateway.restrictedSecurityContext" . | nindent 6 }}
   {{- with .Values.imagePullSecrets }}
   imagePullSecrets:
-    {{- toYaml . | nindent 4 }}
+    {{- include "airlock-microgateway.imagePullSecrets" . | nindent 4 }}
   {{- end }}
   serviceAccountName: "{{ include "airlock-microgateway.fullname" . }}-tests"
 {{- end -}}
