--- a/deploy/charts/airlock-microgateway/tests/operator/tests_test.yaml
+++ b/deploy/charts/airlock-microgateway/tests/operator/tests_test.yaml
@@ -38,10 +38,24 @@ tests:
     templates:
       - tests/test-install.yaml
 
-  - it: test should have imagePullSecrets if set
+  - it: test should have imagePullSecrets if set as list of objects
     set:
       imagePullSecrets:
         - name: myRegistryPullSecret
+    asserts:
+      - contains:
+          path: spec.imagePullSecrets
+          content:
+            name: myRegistryPullSecret
+          count: 1
+          any: true
+    templates:
+      - tests/test-install.yaml
+
+  - it: test should have imagePullSecrets if set as list of strings
+    set:
+      imagePullSecrets:
+        - myRegistryPullSecret
     asserts:
       - contains:
           path: spec.imagePullSecrets
@@ -152,10 +166,24 @@ tests:
     templates:
       - tests/statefulset.yaml
 
-  - it: test backend should have imagePullSecrets if set
+  - it: test backend should have imagePullSecrets if set as list of objects
     set:
       imagePullSecrets:
         - name: myRegistryPullSecret
+    asserts:
+      - contains:
+          path: spec.template.spec.imagePullSecrets
+          content:
+            name: myRegistryPullSecret
+          count: 1
+          any: true
+    templates:
+      - tests/statefulset.yaml
+
+  - it: test backend should have imagePullSecrets if set as list of strings
+    set:
+      imagePullSecrets:
+        - myRegistryPullSecret
     asserts:
       - contains:
           path: spec.template.spec.imagePullSecrets
