--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -6,9 +6,13 @@ fullnameOverride: ""
 commonLabels: {}
 # -- Annotations to add to all resources.
 commonAnnotations: {}
-# -- ImagePullSecrets to use when pulling images.
+# -- ImagePullSecrets to use when pulling images. Can be defined either as a list of objects or as a list of strings.
 imagePullSecrets: []
-#   - name: myRegistryKeySecretName
+#   - name: myRegistryKeySecretName1
+#   - name: myRegistryKeySecretName2
+# or
+#   - myRegistryKeySecretName1
+#   - myRegistryKeySecretName2
 
 crds:
   # -- Whether to skip the sanity check which prevents installing/upgrading the helm chart in a cluster with outdated Airlock Microgateway CRDs.
@@ -34,10 +38,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.7.1"
+    tag: "4.7.2"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:67946b2bb5c2f8e2e2ef3e0e2758a973e219d609ea9c4f6c6057b150737c79be"
+    digest: "sha256:4585c9ff760d0b05efd2507b1dab45b3ca6c44fd25d11061b6d42bdf3508b69d"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -146,10 +150,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.7.1"
+    tag: "4.7.2"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:5cd7ea8e3d9bf5fbb1d6e05063f1cbbdfcef1b18cb4fbf020566e16b28b273f6"
+    digest: "sha256:e9256e37c6ffb246d756ab0ed3851ea883fc299deb62432bd757d13c4eddc3c9"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Default resource restrictions to apply to the Airlock Microgateway Engine container when deployed as a sidecar.
@@ -184,10 +188,10 @@ sessionAgent:
     # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
     repository: "quay.io/airlock/microgateway-session-agent"
     # -- Image tag to pull.
-    tag: "4.7.1"
+    tag: "4.7.2"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:ba260cd5f9365de7439d0d62f9428ab2e8de7c7504a963f081d09bf4a3575645"
+    digest: "sha256:9674487f070bf5a607cbd8d533f10d929bd64272ef5c98f99a99aa3d6eaf6431"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container when the Airlock Microgateway Engine is deployed as a sidecar.
