--- a/.github/workflows/dashboard-attach-action.yaml
+++ b/.github/workflows/dashboard-attach-action.yaml
@@ -21,14 +21,10 @@ jobs:
       - name: Create ZIP file
         run: |
           mkdir -p artifacts
-          zip -j artifacts/dashboards.zip deploy/charts/airlock-microgateway/dashboards/*.json
+          zip -j "artifacts/dashboards-${{ github.event.release.tag_name }}.zip" deploy/charts/airlock-microgateway/dashboards/*.json
 
       - name: Upload release artifact
-        uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: artifacts/dashboards.zip
-          asset_name: dashboards-${{ github.event.release.tag_name }}.zip
-          asset_content_type: application/zip
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload "${{ github.event.release.tag_name }}" "artifacts/dashboards-${{ github.event.release.tag_name }}.zip"
